--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -154,8 +154,6 @@ barplot(probs,ylab="Probability",xlab="Possibilities",main="Binomial distributio
 
 **Q** What population parameter might the binomial distribution be useful for modeling?
 
-**tophat** In R, generate one random number from a Binomial distribution with 10 trials and probability of success equal to 0.3
-
 Another discrete distribution we will use in this class is the *Poisson distribution*:
 
 ```{r}
@@ -194,7 +192,7 @@ curve(dunif(x,lower,upper),0,10,ylab="Probability (density)",xlab="Possibilities
 
 ```
 
-This isn't a very intersting looking distribution. All possible numbers from 0 to 10 are equally probable.
+This isn't a very interesting looking distribution. All possible numbers from 0 to 10 are equally probable.
 
 Another continuous distribution you should know is called the *Normal distribution*. This distribution (the classic bell-shaped distribution) has a lower bound of $-\infty$ and an upper bound of $\infty$.
 
@@ -210,42 +208,7 @@ curve(dnorm(x,mean,stdev),0,15,ylab="Probability (density)",xlab="Possibilities"
 
 ```
 
-**Q** What population parameter might this distribution be useful for modeling?
-
-**tophat** In R, generate one random number from a Normal distribution with mean of 1.75 and standard deviation of 0.9 
-
-
-Another continuous distribution you should know is called the *Log-normal distribution*. This distribution has a lower bound of zero and an upper bound of $\infty$.
-
-**Q** What population parameter might the log-normal distribution be useful for modeling?
-
-```{r}
-
-############
-# Log-normal distribution
-
-meanlog = 1.4
-stdevlog = 0.6
-
-curve(dlnorm(x,meanlog,stdevlog),0,15,ylab="Probability (density)",xlab="Possibilities",main="Lognormal distribution (continuous)")   # probability density
-
-```
-
-Another continuous distribution you might want to know is called the *Beta distribution*. This distribution has a lower bound of zero and an upper bound of 1.
-
-**Q** What population parameter might the beta distribution be useful for modeling?
-
-```{r}
-
-##########
-# Beta distribution
-
-shape1 = 10
-shape2 = 4
-
-curve(dbeta(x,shape1,shape2),0,1,ylab="Probability (density)",xlab="Possibilities",main="Beta distribution (continuous)")   # probability density
-
-```
+**Q** What population parameter(s) might this distribution be useful for modeling?
 
 ### Explore distributions in R
 
@@ -299,23 +262,14 @@ rbeta(1,shape1=10,shape2=3)  # beta distribution is defined by "shape1" and "sha
 
 ```
 
-Can you change one of the above functions to produce more than 1 random number?
+**tophat** In R, generate one random number from a Binomial distribution with 10 trials and probability of success equal to 0.3
 
-Try to change one of the other parameters and generate 100 random numbers? To visualize the distribution you can use the "hist()" function to produce a histogram of the random distribution you just generated!    
+**tophat** In R, generate one random number from a Normal distribution with mean of 1.75 and standard deviation of 0.9 
 
-You can even make up your own distribution if you want!
 
-```{r}
+Can you modify one of the above functions to produce more than 1 random number?
 
-########
-# sample from an arbitrary distribution!
-
-distribution <- c(5,3,5,4,3,6,4,5,5,1,6,5,4,3,6,6,4,2,8,4,4,5,2)     # make up a set of possibilities
-hist(distribution,freq = F, ylab="Probability",xlab="Possibilities")  # visualize distribution
-sample(distribution,1)  # take one random sample from this distribution!
-
-```
-
+Try to modify one of the other parameters and generate 100 random numbers? To visualize the distribution you can use the "hist()" function to produce a histogram of the random distribution you just generated!    
 
 ### In-Class Exercise: Fit a distribution! 
 
@@ -350,48 +304,48 @@ hist(hatch_perfem)
 
 **Q**: What type of uncertainty does this set of values most likely represent? What random number generator might you use to represent this uncertainty? [tophat]
 
-Now let's try to fit a distribution to these data! We could use a normal distribution (which would be perfectly fine), but because the total per-capita number of eggs successfully hatched cannot go below zero (but has no defined upper bound) it's even more appropriate to use a lognormal distribution!
+Now let's try to fit a distribution to these data! Let's use a normal distribution. (NOTE: technically speaking we might want to use a distribution that can't produce negative numbers- like the log-normal distribution, but we will usually use the normal distribution in this class for simplicity)
 
 We could use statistics to fit the distribution, but we are just going to use trial and error for now! Here is some code to help you get started.
 
-Note that the lognormal distribution has two parameters: the first ('meanlog') helps to define the mean and the other ('sdlog') helps to determine the variability of the distribution. 
+Note that the normal distribution has two parameters: the first ('mean') helps to define the mean (obviously!) and the other ('sd') determines the variability of the distribution. 
 
 ```{r}
 
 ############
-# Try to identify a lognormal random number distribution to represent the canvasback data
+# Try to identify a normal distribution to represent the canvasback data
 
 ## first, plot a histogram of the data from the 20-year study
 hist(hatch_perfem,freq=F,main="Histogram of avg number hatched per female",xlab="possibilities",ylab="probability",xlim=c(0,10),ylim=c(0,1))
 
-## now, overlay a lognormal probability distribution with arbitrary parameters (meanlog and sdlog). This is just a starting point.
+## now, overlay a normal probability distribution with arbitrary parameters (mean and sd). This is just a starting point.
 
-curve(dlnorm(x,meanlog=1.5,sdlog=0.39),col="green",lty=2,lwd=2,add=T)
+curve(dnorm(x,mean=4,sd=2),col="green",lty=2,lwd=2,add=T)
 
-curve(dlnorm(x,meanlog=1.8,sdlog=0.39),col="green",lty=2,lwd=2,add=T)    # try a different value...
+curve(dnorm(x,mean=1.8,sd=0.39),col="green",lty=2,lwd=2,add=T)    # try a different value...
 
-#### Keep changing the value for 'meanlog' until you find best parameters to fit the data!
+#### Keep changing the value for 'mean' and 'sd' until you find best parameters to fit the data!
 
-#### Once you find the best-fit parameters, generate 5 random numbers from this distribution using the "rlnorm()" function in R
+#### Once you find the best-fit parameters, generate 5 random numbers from this distribution using the "rnorm()" function in R
 
-rlnorm(5,meanlog=1.5,sdlog=0.39)    # for example! (remember to change the "meanlog" parameter to the value you identified above!)
+rnorm(5,mean=4,sd=1)    # for example! (remember to change the "mean" and "sd" parameters to the values you identified above!)
 
 ```
 
 ```{r echo=FALSE, eval=FALSE}
 
 library(MASS)
-fitdistr(hatch_perfem,"log-normal")
+fitdistr(hatch_perfem,"normal")
 
 ```
 
 
-1) Use trial-and-error to find appropriate "meanlog" parameter for the lognormal distribution.
+1) Use trial-and-error to find appropriate "mean" and "sd" parameters for the normal distribution.
 
-2) Use your fitted distribution to predict the average number of hatchlings per female for the next 5 years. To do this, use the "rlnorm()" function in R.
+2) Use your fitted distribution to predict the per-capita production of hatchlings for the next 5 years. To do this, use the "rnorm()" function in R.
 
-**Q**: what is the best-fit value for "meanlog"?  [tophat]
-
+**Q**: what is the best-fit value for "mean"?  [tophat]
+**Q**: what is the best-fit value for "sd"?  [tophat]
 
 
 ### In-Class Exercise 2: Stochasticity and Uncertainty in InsightMaker
